выполнил задание 2